--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<version>1.0.1</version>
 	</parent>
 	<groupId>com.aqnote.shared</groupId>
-	<artifactId>aqnote.cryptography</artifactId>
+	<artifactId>cryptography</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>AQNote's Project For Encrypt</name>
 	<url>http://www.aqnote.com</url>
