--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.aqnote.shared</groupId>
 	<artifactId>cryptology</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<name>AQNote's Project For Cryptology</name>
 	<url>http://www.aqnote.com</url>
 
